syntax = "proto3";

option java_multiple_files = true;
option java_package = "uk.me.maitland.grpc.echo";
option java_outer_classname = "EchoServiceProto";

service EchoService {
  rpc Echo (EchoRequest) returns (EchoResponse) {}
}

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
}